View latest (#5)
* Add get latest ID to API

* Add latest jump on site

* Stop showing random test scores

* Fix tests
