# site/src/lib/api/apis/RoundApi.ts
@@ -41,6 +41,43 @@ export interface RoundRoundIDScorePutRequest {
  */
 export class RoundApi extends runtime.BaseAPI {
   /**
+   * Gets the latest round ID
+   */
+  async latestRoundIDGetRaw(
+    initOverrides?: RequestInit | runtime.InitOverrideFunction,
+  ): Promise<runtime.ApiResponse<any>> {
+    const queryParameters: any = {};
+
+    const headerParameters: runtime.HTTPHeaders = {};
+
+    const response = await this.request(
+      {
+        path: `/latest/roundID`,
+        method: "GET",
+        headers: headerParameters,
+        query: queryParameters,
+      },
+      initOverrides,
+    );
+
+    if (this.isJsonMime(response.headers.get("content-type"))) {
+      return new runtime.JSONApiResponse<any>(response);
+    } else {
+      return new runtime.TextApiResponse(response) as any;
+    }
+  }
+
+  /**
+   * Gets the latest round ID
+   */
+  async latestRoundIDGet(
+    initOverrides?: RequestInit | runtime.InitOverrideFunction,
+  ): Promise<any> {
+    const response = await this.latestRoundIDGetRaw(initOverrides);
+    return await response.value();
+  }
+
+  /**
    * Creates a new round
    */
   async roundPostRaw(
